--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "jest --watch --verbos",
+    "test": "jest --watch --verbose",
     "start": "node index.js",
     "server": "nodemon index.js"
   },
